--- a/index.css
+++ b/index.css
@@ -1,76 +1,75 @@
-@import url('https://fonts.googleapis.com/css2?family=Ubuntu&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Ubuntu&display=swap");
 
 body {
-    margin: 0;
-    background: url("https://images.unsplash.com/photo-1558737443-3a6e986e160a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2089&q=80");
-    background-size: cover;
-    background-position: center center;
-    height: 100vh;
+  margin: 0;
+  background: url("https://images.unsplash.com/photo-1558737443-3a6e986e160a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2089&q=80");
+  background-size: cover;
+  background-position: center center;
+  height: 100vh;
 }
 
 /* Add a black background color to the top navigation */
 .topnav {
-    background-color: #333;
-    overflow: hidden;
-  }
-  
-  /* Style the links inside the navigation bar */
-  .topnav a {
-    float: left;
-    color: #f2f2f2;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 17px;
-  }
-  
-  /* Change the color of links on hover */
-  .topnav a:hover {
-    background-color: #ddd;
-    color: black;
-  }
-  
-  /* Add a color to the active/current link */
-  .topnav a.active {
-    background-color: gray;
-    color: white;
-  }
-
-  .content {
-      background: rgb(0 0 0 / 40%);
-      width: 40%;
-      height: 40%;
-      margin: 200px auto 90px auto;
-      border-radius: 10px;
-      box-shadow: 14px 10px 14px 1px rgba(0,0,0,0.75);
-      font-family: 'Ubuntu', sans-serif;
-      text-align: center;
-      color: white;
-  }
-
+  background-color: #333;
+  overflow: hidden;
+  display: flex;
+  justify-content: space-between;
 }
 
-  .content h1
-   {
-      padding-top: 20px;
-  }
+/* Style the links inside the navigation bar */
+.topnav a {
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
 
-  .content p {
+/* Change the color of links on hover */
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
 
-  }
- 
-/* SEMINARIE.HTML */ 
+/* Add a color to the active/current link */
+.topnav a.active {
+  background-color: gray;
+  color: white;
+}
 
-.seminarie {
+.content {
   background: rgb(0 0 0 / 40%);
   width: 40%;
   height: 40%;
   margin: 200px auto 90px auto;
   border-radius: 10px;
-  box-shadow: 14px 10px 14px 1px rgba(0,0,0,0.75);
-  font-family: 'Ubuntu', sans-serif;
+  box-shadow: 14px 10px 14px 1px rgba(0, 0, 0, 0.75);
+  font-family: "Ubuntu", sans-serif;
+  text-align: center;
   color: white;
-} 
+}
+
+.content h1 {
+  padding-top: 20px;
+}
+
+.content p {
+  padding: 0 20px;
+}
+
+/* SEMINARIE.HTML */
+
+.seminarie {
+  background: rgb(0 0 0 / 40%);
+  width: 600px;
+  height: 400px;
+  margin: 200px auto 90px auto;
+  border-radius: 10px;
+  box-shadow: 14px 10px 14px 1px rgba(0, 0, 0, 0.75);
+  font-family: "Ubuntu", sans-serif;
+  color: white;
+}
 .seminarie h1 {
   text-align: center;
 }
@@ -86,60 +85,62 @@ body {
 
 .about {
   background: rgb(0 0 0 / 40%);
-  width: 40%;
-  height: 40%;
+  width: 600px;
+  height: 400px;
   margin: 200px auto 90px auto;
   border-radius: 10px;
-  box-shadow: 14px 10px 14px 1px rgba(0,0,0,0.75);
-  font-family: 'Ubuntu', sans-serif;
+  box-shadow: 14px 10px 14px 1px rgba(0, 0, 0, 0.75);
+  font-family: "Ubuntu", sans-serif;
   color: white;
   text-align: center;
-} 
+}
+
+.about h1 {
+  padding-top: 20px;
+}
+
+.about p {
+  padding: 0 20px;
+}
 
 /* SEMINARIEINFO.HTML */
 
-.seminarieInfo{
+.seminarieInfo {
   background: rgb(0 0 0 / 40%);
-  width: 40%;
-  height: 40%;
+  width: 600px;
+  height: 400px;
   margin: 200px auto 90px auto;
   border-radius: 10px;
-  box-shadow: 14px 10px 14px 1px rgba(0,0,0,0.75);
-  font-family: 'Ubuntu', sans-serif;
+  box-shadow: 14px 10px 14px 1px rgba(0, 0, 0, 0.75);
+  font-family: "Ubuntu", sans-serif;
   color: white;
   text-align: center;
-  
 }
-.seminarieInfo button{
+.seminarieInfo button {
   border-radius: 5px;
   background-color: white;
- 
-  
-  
 }
-.seminarieInfo button:hover{
+.seminarieInfo button:hover {
   background-color: grey;
   cursor: pointer;
 }
-.seminarieInfo a{
+.seminarieInfo a {
   text-decoration: none;
   color: black;
 }
 
 /* LOGIN.HTML */
 
-.login{
+.login {
   background: rgb(0 0 0 / 40%);
-  width: 40%;
-  height: auto;
+  width: 600px;
+  height: 400px;
   min-height: 40%;
   margin: 200px auto 90px auto;
   border-radius: 10px;
-  box-shadow: 14px 10px 14px 1px rgba(0,0,0,0.75);
-  font-family: 'Ubuntu', sans-serif;
+  box-shadow: 14px 10px 14px 1px rgba(0, 0, 0, 0.75);
+  font-family: "Ubuntu", sans-serif;
   color: white;
-  
-  
 }
 .login h1 {
   padding-top: 33px;
@@ -157,23 +158,20 @@ body {
   margin: 50px auto 50px auto;
   position: relative;
   height: 160px;
-  
 }
-.login label{
+.login label {
   text-align: start;
   font-size: small;
-  
 }
-.login button{
- position: absolute;
- bottom: 0;
- left: 35%;
- transition-duration: 0.2s;
- height: 30px;
- width: 70px;
- border-radius: 7px;
- border: none;
- 
+.login button {
+  position: absolute;
+  bottom: 0;
+  left: 35%;
+  transition-duration: 0.2s;
+  height: 30px;
+  width: 70px;
+  border-radius: 7px;
+  border: none;
 }
 .login button:hover {
   background-color: #325aa8;
@@ -193,16 +191,16 @@ body {
 
 .registration {
   background: rgb(0 0 0 / 40%);
-  width: 40%;
-  height: auto;
+  width: 600px;
+  height: 400px;
   min-height: 40%;
   margin: 200px auto 90px auto;
   border-radius: 10px;
-  box-shadow: 14px 10px 14px 1px rgba(0,0,0,0.75);
-  font-family: 'Ubuntu', sans-serif;
+  box-shadow: 14px 10px 14px 1px rgba(0, 0, 0, 0.75);
+  font-family: "Ubuntu", sans-serif;
   color: white;
 }
-.registration button{
+.registration button {
   position: absolute;
   bottom: 10px;
   left: 35%;
@@ -211,14 +209,13 @@ body {
   width: 70px;
   border-radius: 7px;
   border: none;
-  
- }
- .registration button:hover {
-   background-color: #325aa8;
-   color: white;
-   cursor: pointer;
- }
- .registration h1 {
+}
+.registration button:hover {
+  background-color: #325aa8;
+  color: white;
+  cursor: pointer;
+}
+.registration h1 {
   padding-top: 33px;
   text-align: center;
 }
@@ -235,12 +232,10 @@ body {
   position: relative;
   height: auto;
   min-height: 260px;
-  
 }
-.registration label{
+.registration label {
   text-align: start;
   font-size: small;
-  
 }
 .registration p {
   text-align: center;
@@ -248,6 +243,5 @@ body {
 }
 .registration a {
   text-decoration: none;
-  color: aqua
-  ;
+  color: aqua;
 }
