--- a/signtoseminar-frontend/src/App.css
+++ b/signtoseminar-frontend/src/App.css
@@ -1,6 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Staatliches&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap');
+
 .app {
+  font-family: 'Staatliches', cursive;
   margin: 0;
-  background: url("https://images.unsplash.com/photo-1558737443-3a6e986e160a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2089&q=80");
+  background: url('https://images.unsplash.com/photo-1558737443-3a6e986e160a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2089&q=80');
   background-size: cover;
   background-position: center center;
   height: 100vh;
