--- a/signtoseminar-frontend/src/component/Seminar/SeminarList.css
+++ b/signtoseminar-frontend/src/component/Seminar/SeminarList.css
@@ -1,13 +1,19 @@
 .seminarie {
   background: rgb(0 0 0 / 40%);
   width: 600px;
-  height: fit-content;
+  max-height: 800px;
   margin: 100px auto 90px auto;
   border-radius: 10px;
   box-shadow: 14px 10px 14px 1px rgba(0, 0, 0, 0.75);
-  font-family: "Ubuntu", sans-serif;
+  font-family: 'Ubuntu', sans-serif;
   color: white;
-  overflow-y: hidden;
+  overflow-y: scroll;
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
+
+.seminarie::-webkit-scrollbar {
+  display: none;
 }
 .seminarie h1 {
   padding-top: 20px;
@@ -23,4 +29,10 @@
 .seminarie a {
   text-decoration: none;
   color: white;
+}
+
+@media screen and (max-width: 650px) {
+  .seminarie {
+    width: 380px;
+  }
 }
